--- a/public/index.html
+++ b/public/index.html
@@ -7,23 +7,28 @@
 
 	<title>Inspector</title>
 
-	<link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
+	<link crossorigin="anonymous" href="https://unpkg.com/browse/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-teal-lightest">
+<body class="bg-teal-200">
 
 	<main class="py-6">
-		<div class="bg-white mx-auto max-w-sm shadow-lg rounded-lg overflow-hidden">
+		<div class="bg-white mx-auto max-w-lg shadow-lg rounded-lg overflow-hidden">
 			<div class="sm:flex sm:items-center px-6 py-4">
-				<img class="block h-16 sm:h-24 rounded-full mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="https://github.com/ericclemmons.png"
-				 alt="">
+				<img class="block h-16 sm:h-24 rounded-full mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0"
+					src="https://github.com/ericclemmons.png" alt="">
 				<div class="text-center sm:text-left sm:flex-grow">
 					<div class="mb-4">
-						<p class="text-xl leading-tight">Eric Clemmons</p>
-						<p class="text-sm leading-tight text-grey-dark">Developer at Starbucks Coffee Company.</p>
+						<p class="text-xl leading-tight pb-6">Hi, I'm Eric Clemmons.</p>
+						<p class="text-sm leading-tight text-grey-dark">
+							I specialize in building remote teams & developing full-stack applications with technologies such as
+							TypeScript, React,
+							& GraphQL that enable metrics-driven experimentation.
+						</p>
 					</div>
 					<div>
-						<button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple text-purple hover:bg-purple hover:text-white">Message</button>
+						<button
+							class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-500 text-purple-500 hover:bg-purple-500 hover:text-white">Message</button>
 					</div>
 				</div>
 			</div>
