Fix reference to original tailwindcss

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
 	<title>Inspector</title>
 
-	<link crossorigin="anonymous" href="https://unpkg.com/browse/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
+	<link crossorigin="anonymous" href="https://unpkg.com/tailwindcss@1.0.6/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
 <body class="bg-teal-200">
