--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Tailwind CSS GUI</title>
   <link crossorigin="anonymous" rel="stylesheet" href="https://unpkg.com/tailwindcss@1.1.0/dist/tailwind.min.css">
 </head>
 
